--- a/app/src/main/res/layout/activity_insert.xml
+++ b/app/src/main/res/layout/activity_insert.xml
@@ -165,16 +165,28 @@
 
     <Spinner
         android:id="@+id/periodSpinner"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="133dp"
         android:layout_marginTop="16dp"
         android:entries="@array/waterPeriod"
         android:overlapAnchor="false"
+        android:spinnerMode="dropdown"
         android:textColor="#797979"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textAlarmPeriod"
-        app:layout_constraintTop_toBottomOf="@+id/alarmTime"
-        android:spinnerMode="dropdown"/>
+        app:layout_constraintTop_toBottomOf="@+id/alarmTime" />
+
+    <Button
+        android:id="@+id/saveBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="159dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="164dp"
+        android:text="@string/save"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/periodSpinner" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
