--- a/app/src/main/res/layout/item_cardview.xml
+++ b/app/src/main/res/layout/item_cardview.xml
@@ -20,16 +20,17 @@
                 android:id="@+id/cardview_imageview"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:scaleType="centerCrop"/>
+                android:scaleType="centerCrop" />
 
             <TextView
-                android:layout_marginTop="5dp"
-                android:layout_marginStart="10dp"
                 android:id="@+id/cardview_textName"
-                android:layout_below="@+id/cardview_imageview"
-                android:text="이름"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/cardview_imageview"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="7dp"
+                android:layout_marginBottom="5dp"
+                android:text="이름" />
 
             <TextView
                 android:layout_marginTop="5dp"
@@ -40,32 +41,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
-            <TextView
-                android:layout_marginBottom="5dp"
-                android:layout_marginStart="10dp"
-                android:id="@+id/cardview_textKind"
-                android:layout_below="@+id/cardview_textName"
-                android:text="종류"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:layout_marginBottom="5dp"
-                android:layout_marginStart="5dp"
-                android:layout_below="@+id/cardview_textName"
-                android:layout_toEndOf="@+id/cardview_textKind"
-                android:id="@+id/cardview_kind"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
             <ImageButton
                 android:id="@+id/cardview_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
                 android:layout_below="@+id/cardview_imageview"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="0dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:background="@android:color/transparent"
                 android:src="@drawable/baseline_more_vert_24" />
         </RelativeLayout>
