--- a/app/src/main/res/layout/item_cardview.xml
+++ b/app/src/main/res/layout/item_cardview.xml
@@ -16,6 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
+
             <ImageView
                 android:id="@+id/cardview_imageview"
                 android:layout_width="match_parent"
@@ -41,7 +42,6 @@
                 android:layout_height="wrap_content"/>
 
             <TextView
-                android:layout_marginBottom="5dp"
                 android:layout_marginStart="10dp"
                 android:id="@+id/cardview_textKind"
                 android:layout_below="@+id/cardview_textName"
@@ -50,7 +50,6 @@
                 android:layout_height="wrap_content" />
 
             <TextView
-                android:layout_marginBottom="5dp"
                 android:layout_marginStart="5dp"
                 android:layout_below="@+id/cardview_textName"
                 android:layout_toEndOf="@+id/cardview_textKind"
@@ -68,6 +67,22 @@
                 android:layout_marginEnd="0dp"
                 android:background="@android:color/transparent"
                 android:src="@drawable/baseline_more_vert_24" />
+
+            <TextView
+                android:layout_marginStart="10dp"
+                android:id="@+id/cardview_textDate"
+                android:layout_below="@+id/cardview_textKind"
+                android:text="날짜"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_marginStart="5dp"
+                android:layout_below="@+id/cardview_textKind"
+                android:layout_toEndOf="@+id/cardview_textKind"
+                android:id="@+id/cardview_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 </androidx.appcompat.widget.LinearLayoutCompat>
