--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -18,11 +18,18 @@
         app:mcv_showOtherDates="all"
         tools:ignore="MissingConstraints" />
 
+    <ListView
+        android:id="@+id/listview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        android:layout_below="@+id/calendarView" />
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
+        android:layout_alignParentBottom="true"
         app:itemBackground="@drawable/item_bg"
         app:itemIconTint="@drawable/bnv_tab_item_foreground"
         app:itemTextColor="@drawable/bnv_tab_item_foreground"
@@ -30,4 +37,4 @@
         app:menu="@menu/bottom_navigation_main"
         tools:ignore="MissingConstraints" />
 
-</FrameLayout>
+</RelativeLayout>
