설정 기능 추가
1. 설정 Activity 작업중
2. 오픈소스 라이선스 Activity 작업중

--- a/app/src/main/res/menu/bottom_navigation_main.xml
+++ b/app/src/main/res/menu/bottom_navigation_main.xml
@@ -17,7 +17,7 @@
         app:showAsAction="ifRoom"
         app:labelVisibilityMode="labeled"/>
     <item
-        android:id="@+id/action_myInfo"
+        android:id="@+id/action_settings"
         android:icon="@drawable/outline_settings_black_24"
         android:title="@string/setting"
         android:background="#00ff0000"
