설정 기능 추가
1. 오픈소스 라이선스 작업중

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -16,6 +16,10 @@
             app:key="sound"
             app:title="@string/sound_title" />
 
+    </PreferenceCategory>
+
+    <PreferenceCategory app:title="@string/info_header">
+
         <Preference
             app:key="open_source"
             app:title="@string/open_source_title"
