--- a/app/src/main/res/layout/activity_open_source_license.xml
+++ b/app/src/main/res/layout/activity_open_source_license.xml
@@ -32,6 +32,7 @@
         android:layout_gravity="center"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginTop="10dp"
         android:textColor="@android:color/black"
         android:textSize="12sp"
         android:layout_weight="1"
