--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,10 +1,30 @@
 <resources>
     <string-array name="open_sources">
+        <item>commons-io:commons-io:2.4</item>
+        <item>com.karumi:dexter:6.0.2</item>
         <item>com.github.bumptech.glide:glide</item>
         <item>com.github.prolificinteractive:material-calendarview</item>
     </string-array>
 
     <string-array name="open_source_licenses">
+        <item>
+            Apache Commons IO\n
+            Copyright 2002-2020 The Apache Software Foundation\n\n
+            This product includes software developed at\n
+            The Apache Software Foundation (https://www.apache.org/).
+        </item>
+        <item>
+            Copyright 2015 Karumi\n
+            Licensed under the Apache License, Version 2.0 (the "License");\n
+            you may not use this file except in compliance with the License.\n
+            You may obtain a copy of the License at\n
+            http://www.apache.org/licenses/LICENSE-2.0\n
+            Unless required by applicable law or agreed to in writing, software\n
+            distributed under the License is distributed on an "AS IS" BASIS,\n
+            WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n
+            See the License for the specific language governing permissions and\n
+            limitations under the License.
+        </item>
         <item>
             License for everything not in third_party and not otherwise marked:
 
@@ -89,16 +109,22 @@
             that this copyright notice remain intact.
         </item>
         <item>
-            Copyright 2015 Karumi\n
-            Licensed under the Apache License, Version 2.0 (the "License");\n
-            you may not use this file except in compliance with the License.\n
-            You may obtain a copy of the License at\n
-            http://www.apache.org/licenses/LICENSE-2.0\n
-            Unless required by applicable law or agreed to in writing, software\n
-            distributed under the License is distributed on an "AS IS" BASIS,\n
-            WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n
-            See the License for the specific language governing permissions and\n
-            limitations under the License.
+            Copyright © 2018 Prolific Interactive\n\n
+            Permission is hereby granted, free of charge, to any person obtaining a copy\n
+            of this software and associated documentation files (the "Software"), to deal\n
+            in the Software without restriction, including without limitation the rights\n
+            to use, copy, modify, merge, publish, distribute, sublicense, and/or sell\n
+            copies of the Software, and to permit persons to whom the Software is\n
+            furnished to do so, subject to the following conditions:\n\n
+            The above copyright notice and this permission notice shall be included in\n
+            all copies or substantial portions of the Software.\n\n
+            THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR\n
+            IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\n
+            FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE\n
+            AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\n
+            LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,\n
+            OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN\n
+            THE SOFTWARE.
         </item>
     </string-array>
 </resources>
