설정 기능 추가
1. 푸시 알람, 진동 설정 작업중

--- a/app/src/main/res/layout/activity_insert.xml
+++ b/app/src/main/res/layout/activity_insert.xml
@@ -175,7 +175,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="133dp"
             android:layout_marginTop="16dp"
-            android:entries="@array/waterPeriod"
+            android:entries="@array/water_period"
             android:overlapAnchor="false"
             android:spinnerMode="dropdown"
             android:textColor="#797979"
