--- a/app/src/main/res/layout/activity_open_source_list.xml
+++ b/app/src/main/res/layout/activity_open_source_list.xml
@@ -8,10 +8,8 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
-        android:background="@android:color/white"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        app:itemBackground="@android:color/white">
+        android:layout_height="?attr/actionBarSize">
 
         <TextView
             android:layout_width="wrap_content"
