--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -11,11 +11,6 @@
             app:key="vibration"
             app:title="@string/vibration_title" />
 
-        <SwitchPreferenceCompat
-            app:dependency="push"
-            app:key="sound"
-            app:title="@string/sound_title" />
-
     </PreferenceCategory>
 
     <PreferenceCategory app:title="@string/info_header">
@@ -24,6 +19,11 @@
             app:key="open_source"
             app:title="@string/open_source_title"
             app:summary="@string/open_source_summary" />
+
+        <PreferenceScreen
+            app:key="version"
+            app:title="@string/version_title"
+            app:summary="@string/version"/>
 
     </PreferenceCategory>
 
