설정 기능 추가
1. 푸시 알람, 진동, 소리 설정 기능 추가

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -8,6 +8,11 @@
 
         <SwitchPreferenceCompat
             app:dependency="push"
+            app:key="sound"
+            app:title="@string/sound_title" />
+
+        <SwitchPreferenceCompat
+            app:dependency="push"
             app:key="vibration"
             app:title="@string/vibration_title" />
 
