식물 검색 기능 개발
1. 식물 검색 기능 개발

--- a/app/src/main/res/menu/menu_list.xml
+++ b/app/src/main/res/menu/menu_list.xml
@@ -3,4 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.yoonbae.plantingplanner.ListActivity">
 
+    <item android:id="@+id/action_search"
+        android:title="검색"
+        android:icon="@drawable/baseline_search_24"
+        android:layout_gravity="right"
+        android:iconTint="@android:color/black"
+        app:showAsAction="always"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
+
 </menu>
