--- a/app/src/main/res/layout/activity_insert.xml
+++ b/app/src/main/res/layout/activity_insert.xml
@@ -17,17 +17,18 @@
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:contentDescription="@string/plant_picture"
+            android:scaleType="fitCenter"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/plantName"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/baseline_insert_photo_24" />
+            app:srcCompat="@drawable/baseline_insert_photo_black_48" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/plantName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:hint="@string/plant_name"
             app:endIconMode="clear_text"
@@ -44,7 +45,7 @@
             android:id="@+id/plantDesc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:hint="@string/plant_description"
             app:endIconMode="clear_text"
@@ -62,28 +63,25 @@
             android:id="@+id/dateView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="32dp"
             android:text="@string/plant_date"
             android:textSize="16sp"
-            app:layout_constraintEnd_toStartOf="@+id/adoptionDate"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/plantDesc" />
 
         <TextView
             android:id="@+id/adoptionDate"
-            android:layout_width="200dp"
+            android:layout_width="150dp"
             android:layout_height="21dp"
-            android:layout_marginStart="60dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
             android:ems="10"
             android:inputType="date"
             android:text="날짜를 선택해주세요."
             android:textColor="#797979"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/dateView"
             app:layout_constraintTop_toBottomOf="@+id/plantDesc"
             tools:ignore="TextViewEdits" />
 
@@ -91,8 +89,9 @@
             android:id="@+id/alarm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
             android:text="@string/water_alarm_setting"
             android:textColor="#797979"
             android:textSize="16sp"
@@ -103,7 +102,7 @@
             android:id="@+id/alarmTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="32dp"
             android:text="알람 시작일"
@@ -113,17 +112,16 @@
 
         <TextView
             android:id="@+id/alarmDate"
-            android:layout_width="200dp"
+            android:layout_width="150dp"
             android:layout_height="21dp"
-            android:layout_marginStart="128dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
             android:ems="10"
             android:inputType="date"
             android:text="날짜를 선택해주세요."
             android:textColor="#797979"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/alarmTextView"
             app:layout_constraintTop_toBottomOf="@+id/alarm"
             tools:ignore="TextViewEdits" />
 
@@ -131,7 +129,7 @@
             android:id="@+id/textAlarmTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="32dp"
             android:text="알람 시각"
@@ -141,17 +139,16 @@
 
         <TextView
             android:id="@+id/alarmTime"
-            android:layout_width="200dp"
+            android:layout_width="150dp"
             android:layout_height="21dp"
-            android:layout_marginStart="128dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
             android:ems="10"
             android:inputType="date"
             android:text="시간을 선택해 주세요."
             android:textColor="#797979"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/alarmTextView"
             app:layout_constraintTop_toBottomOf="@+id/alarmDate"
             tools:ignore="TextViewEdits" />
 
@@ -159,7 +156,7 @@
             android:id="@+id/textAlarmPeriod"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="32dp"
             android:text="알람 주기"
@@ -169,16 +166,16 @@
 
         <Spinner
             android:id="@+id/periodSpinner"
-            android:layout_width="200dp"
+            android:layout_width="160dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="133dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            android:textAlignment="viewStart"
             android:entries="@array/water_period"
             android:overlapAnchor="false"
             android:spinnerMode="dropdown"
             android:textColor="#797979"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textAlarmPeriod"
             app:layout_constraintTop_toBottomOf="@+id/alarmTime" />
 
         <Button
