--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -1,25 +1,13 @@
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <PreferenceCategory app:title="@string/setting_header">
-
         <SwitchPreferenceCompat
             app:key="push"
-            app:title="@string/push_title" />
-
-        <SwitchPreferenceCompat
-            app:dependency="push"
-            app:key="sound"
-            app:title="@string/sound_title" />
-
-        <SwitchPreferenceCompat
-            app:dependency="push"
-            app:key="vibration"
-            app:title="@string/vibration_title" />
-
+            app:title="@string/push_title"
+            app:defaultValue="true" />
     </PreferenceCategory>
 
     <PreferenceCategory app:title="@string/info_header">
-
         <Preference
             app:key="open_source"
             app:title="@string/open_source_title"
@@ -29,7 +17,6 @@
             app:key="version"
             app:title="@string/version_title"
             app:summary="@string/version"/>
-
     </PreferenceCategory>
 
 </PreferenceScreen>
